<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">轨迹日记</string>
    <string name="action_settings">设置</string>
    <string name="new_contact">记录接触人员信息</string>
    <string name="new_event">记录活动轨迹</string>
    <string name="event_name">事件名称</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="date">日期</string>
    <string name="start">起始时间</string>
    <string name="end">结束时间</string>
    <string name="place">地点</string>
    <string name="companions">公司</string>
    <string name="name">姓名</string>
    <string name="known_contact">亲友关系?</string>
    <string name="mitigation_question">选择具有何种预防措施</string>
    <string name="phone">电话</string>
    <string name="unsure">不确定</string>
    <string name="encounter_type">室内或室外</string>
    <string name="indoors">室内</string>
    <string name="outdoors">室外</string>
    <string name="emptydiary">日记为空</string>
    <string name="contact_saved">接触人员信息已保存</string>
    <string name="event_saved">活动轨迹信息已保存</string>
    <string name="edit_event">记录活动轨迹</string>
    <string name="edit_contact">记录接触人员信息</string>
    <string name="options">设置</string>
    <string name="entry_deleted">记录已删除</string>
    <string name="notification_title">您今天和谁在一起呢？</string>
    <string name="notification_text">添加今日的轨迹日记吧</string>
    <string name="choose_option">请选择一个选项</string>
    <string name="compulsory_field">必填项</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="alarm_modified">时钟已设置</string>
    <string name="incorrect_alarm_time">请填写正确的时间格式</string>
    <string name="daily_reminder">日常提醒</string>
    <string name="choose_time">选择时间</string>
    <string name="show_close_contacts">仅展示密接记录</string>
    <string name="more">更多</string>
    <string name="settings">选项</string>
    <string name="emptytime" translatable="false">00:00</string>
    <string name="entries_deleted">已删除记录</string>
    <string name="entries_selected">" 项记录已选择"</string>
    <string name="empty_table">点击"+"号添加记录</string>
    <string name="app_version_title">App版本</string>
    <string name="about_donate_summary" />
    <string name="entry_duplicated">已复制记录</string>
    <string name="entries_duplicated">已复制多项记录</string>
    <string name="duplicate">复制到今日</string>
    <string name="select">选择</string>
    <string name="notes">备注</string>

    <string name="theme">深色模式</string>
    <string name="theme_light">明亮</string>
    <string name="theme_dark">黑暗</string>
    <string name="theme_system">跟随系统</string>
    <string name="backup">备份与恢复</string>
    <string name="import_database">导入记录</string>
    <string name="import_database_summary">加载本地Excel文件记录</string>
    <string name="export_database">导出记录</string>
    <string name="export_database_summary">将所有记录导出Excel文件到本地</string>
    <string name="export_success">文件已保存</string>
    <string name="import_fail">文件发生错误</string>
    <string name="import_success">导入成功</string>
    <string name="import_notfound">文件未找到</string>
    <string name="import_select">选择导入的文件</string>
    <string name="mitigation_distance">保持大于1米的距离</string>
    <string name="mitigation_mask_me">我有佩戴口罩</string>
    <string name="mitigation_mask_other">其他人有佩戴口罩</string>
    <string name="mitigation_ventilation">处于通风的环境</string>
    <string name="mitigation_distance_value">保持距离</string>
    <string name="mitigation_mask_me_value">口罩 (我)</string>
    <string name="mitigation_mask_other_value">口罩 (其他人)</string>
    <string name="mitigation_ventilation_value">通风环境</string>
    <string name="click_to_select">点击选择</string>
    <string name="mitigation_title">预防措施</string>
    <string name="none">无</string>
    <string name="shared_from">分享自</string>
    <string name="do_not_show_again">不再显示</string>
    <string name="checkin_title">Register at the venue</string>
    <string name="checkin_reminder">This is just a register for yourself. Please, do not forget to register your details at the venue so the local authority can notify you if necessary.</string>
    <string name="qr_error">无法读取该代码</string>
    <string name="logNdays">只保存最近的记录</string>
    <string name="logNdays_on">只会存储最近的记录到本地</string>
    <string name="logNdays_off">所有记录将永久存储到本地</string>
    <string name="log_number_days">本地记录保存天数</string>
    <string name="incorrect_number_of_days">请填写一个自然天数</string>
    <string name="alarm_permission_required">安卓12以上系统需要授予通知权限以建立日常提醒</string>
    <string name="go_to_settings">前往设置</string>
</resources>