<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/neweventlayout"
    tools:context=".EditEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:background="#00aaaaaa"
                        android:layout_gravity="end"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/event_top_duplicate_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:src="@drawable/ic_duplicate"
                            android:paddingRight="@dimen/fab_margin_right"
                            android:onClick="duplicateEvent"
                            android:contentDescription="@string/duplicate"
                            android:paddingEnd="@dimen/fab_margin_right"
                            android:visibility="invisible" />

                        <ImageButton
                            android:id="@+id/event_top_delete_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:src="@drawable/ic_delete"
                            android:paddingRight="@dimen/fab_margin_right"
                            android:onClick="deleteEvent"
                            android:contentDescription="@string/delete"
                            android:paddingEnd="@dimen/fab_margin_right"
                            android:visibility="invisible" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/img1"/>
                <TextView
                    android:text="   今天你去了哪？ "
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/AppBlue"
                    android:layout_width="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingHorizontal="10dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_2"
                    android:hint="@string/event_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage|textMultiLine|textCapSentences"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_2"
                    android:hint="@string/place">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventplace_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage|textMultiLine|textCapSentences"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_2"
                    android:hint="@string/companions">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventpeople_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage|textMultiLine|textCapWords"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_2"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventphone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventdate_text"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/shape_4"
                        android:paddingHorizontal="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal"
                        android:layout_marginEnd="5dp"
                        android:textSize="12sp"
                        android:text="@string/start" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:background="@drawable/shape_2"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/eventdate_input"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/date"
                            android:inputType="date"
                            android:gravity="center"
                            android:clickable="true"
                            android:focusable="false"
                            android:cursorVisible="false" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.04"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:text="-" />

                        <EditText
                            android:id="@+id/eventinittime_input"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.48"
                            android:hint="@string/emptytime"
                            android:inputType="time"
                            android:clickable="true"
                            android:focusable="false"
                            android:gravity="center"
                            android:cursorVisible="false" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventtime_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:background="@drawable/shape_4"
                        android:paddingHorizontal="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal"
                        android:layout_marginEnd="5dp"
                        android:textSize="12sp"
                        android:text="@string/end"
                        android:focusable="false" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/shape_2">
                        <EditText
                            android:id="@+id/endeventdate_input"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/date"
                            android:inputType="date"
                            android:gravity="center"
                            android:clickable="true"
                            android:focusable="false"
                            android:cursorVisible="false" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.04"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:text="-" />

                        <EditText
                            android:id="@+id/eventendtime_input"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.48"
                            android:hint="@string/emptytime"
                            android:inputType="time"
                            android:clickable="true"
                            android:focusable="false"
                            android:gravity="center"
                            android:cursorVisible="false" />
                    </LinearLayout>


                </LinearLayout>



                <TextView
                    android:id="@+id/event_encounter_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_4"
                    android:textSize="12sp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingHorizontal="10dp"
                    android:text="@string/encounter_type" />

                <RadioGroup
                    android:id="@+id/event_indoor_outdoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/shape_2"
                    android:gravity="center">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/event_indoors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/indoors" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/event_outdoors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outdoors"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/shape_4"
                    android:textSize="12sp"
                    android:text="@string/mitigation_question" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_2">
                    <TextView
                        android:id="@+id/event_mitigation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/click_to_select"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="?attr/editTextColor"
                        android:background="?attr/editTextBackground"
                        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>
                </LinearLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_2"
                    android:hint="@string/notes" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventnotes_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage|textMultiLine|textCapSentences"
                        android:maxLength="240" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/okButton_AddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="@dimen/fab_margin_right"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:clickable="true"
        android:focusable="true"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_ok"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginEnd="@dimen/fab_margin_right" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>